# efl-opengl

./: LICENSE  README.md
opengl-training/: CMakeLists.txt  shader-basic.vs  shader-compose.fs  shader-compose.vs
opengl-training/include/: Canvas.h  DrawObjects.h  GLRender.h  Shader.h  TextRender.h
opengl-training/include/glad/: glad.h
opengl-training/include/glm/: Makefile
opengl-training/source/: Canvas.cpp  GLRender.cpp  glad.c  main.cpp
